5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/3135/executions/1752_3095.log
== TEST (2019-05-16 16:05:34) 
-- CODE:
R= input("Insira o resultado do campeonato").upper()
print(R)
-- OUTPUT:
V
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:05:45) 
-- CODE:
R= input("Insira o resultado do campeonato").upper()
print(R)
-- EXECUTION TIME:
0.168697
-- TEST CASE 1:
---- input:
v
V
E
D
D
a
b
c
d
X
---- correct output:
6
2
3
---- user output:
V
-- TEST CASE 2:
---- input:
V
E
C
B
A
X
---- correct output:
3
2
0
---- user output:
V
-- TEST CASE 3:
---- input:
A
A
v
v
V
V
X
---- correct output:
12
0
0
---- user output:
A
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:10:45) 
-- CODE:
r= input("Insira o resultado do campeonato").upper()
V=0
D=0
E=0

while(r!="X"):
	if(r=="V"):
		V=V+3
	elif(r=="E"):
		E=E+2
	elif(r=="D"):
		D=D+1
	r=input("Insira seu resultado:")

print(V)
print(E)
print(D)
-- OUTPUT:
6
2
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:10:53) 
-- CODE:
r= input("Insira o resultado do campeonato:").upper()
V=0
D=0
E=0

while(r!="X"):
	if(r=="V"):
		V=V+3
	elif(r=="E"):
		E=E+2
	elif(r=="D"):
		D=D+1
	r=input("Insira seu resultado:")

print(V)
print(E)
print(D)
-- OUTPUT:
6
2
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:12:10) 
-- CODE:
r= input("Insira o resultado do campeonato:").upper()
v=0
d=0
e=0

while(r!="X"):
	if(r=="V"):
		v=v+3
	elif(r=="E"):
		e=e+2
	elif(r=="D"):
		d=d+1
	r=input("Insira seu resultado:")

print(V)
print(E)
print(D)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 15, in <module>
    print(V)
NameError: name 'V' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:12:41) 
-- CODE:
r= input("Insira o resultado do campeonato:").upper()
v=0
d=0
e=0

while(r!="X"):
	if(r=="V"):
		v=v+3
	elif(r=="E"):
		e=e+2
	elif(r=="D"):
		d=d+1
	r=input("Insira seu resultado:")

print(v)
print(e)
print(d)
-- OUTPUT:
6
2
2
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:13:27) 
-- CODE:
r= input("Insira o resultado do campeonato:").upper()
v=0
d=0
e=0

while(r!="x".upper):
	if(r=="V"):
		v=v+3
	elif(r=="E"):
		e=e+2
	elif(r=="D"):
		d=d+1
	r=input("Insira seu resultado:")

print(v)
print(e)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    r=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:13:33) 
-- CODE:
r= input("Insira o resultado do campeonato:").upper()
v=0
d=0
e=0

while(r!="x".upper):
	if(r=="V"):
		v=v+3
	elif(r=="E"):
		e=e+2
	elif(r=="D"):
		d=d+1
	r=input("Insira seu resultado:")

print(v)
print(e)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    r=input()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:13:40) 
-- CODE:
r= input("Insira o resultado do campeonato:").upper()
v=0
d=0
e=0

while(r!="x".upper):
	if(r=="V"):
		v=v+3
	elif(r=="E"):
		e=e+2
	elif(r=="D"):
		d=d+1
	r=input("Insira seu resultado:").upper()

print(v)
print(e)
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 13, in <module>
    r=input().upper()
EOFError: EOF when reading a line
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-16 16:13:52) 
-- CODE:
r= input("Insira o resultado do campeonato:").upper()
v=0
d=0
e=0

while(r!="X"):
	if(r=="V"):
		v=v+3
	elif(r=="E"):
		e=e+2
	elif(r=="D"):
		d=d+1
	r=input("Insira seu resultado:").upper()

print(v)
print(e)
print(d)
-- OUTPUT:
6
2
3
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-16 16:14:18) 
-- CODE:
r= input("Insira o resultado do campeonato:").upper()
v=0
d=0
e=0

while(r!="X"):
	if(r=="V"):
		v=v+3
	elif(r=="E"):
		e=e+2
	elif(r=="D"):
		d=d+1
	r=input("Insira seu resultado:").upper()

print(v)
print(e)
print(d)
-- EXECUTION TIME:
0.285438
-- TEST CASE 1:
---- input:
v
V
E
D
D
a
b
c
d
X
---- correct output:
6
2
3
---- user output:
6
2
3
-- TEST CASE 2:
---- input:
V
E
C
B
A
X
---- correct output:
3
2
0
---- user output:
3
2
0
-- TEST CASE 3:
---- input:
A
A
v
v
V
V
X
---- correct output:
12
0
0
---- user output:
12
0
0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
